--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -72,3 +72,11 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - hive.openshift.io
+  resources:
+  - dnszones
+  verbs:
+  - get
+  - list
+  - watch
